--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ set(SOURCE_FILES
     src/mainwindow.cpp
     src/cvm/ws.cpp
     src/cvm/cvm.cpp
-    src/cvm/models/user.cpp
+    src/cvm/models/vm_list_model.cpp
 )
 
 add_project_meta(META_FILES_TO_INCLUDE)
