Move ui logic code files into their own folder.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ fix_project_version()
 
 set(SOURCE_FILES
     src/main.cpp
-    src/mainwindow.cpp
+    src/ui/mainwindow.cpp
     src/cvm/ws/ws_manager.cpp
     src/cvm/cvm.cpp
     src/cvm/models/vm_list.cpp
@@ -53,7 +53,7 @@ target_precompile_headers(${PROJECT_NAME} PRIVATE
     src/cvm/ws/ws_manager.h  
     src/cvm/cvm.h  
     src/guac.h
-    src/mainwindow.h
+    src/ui/mainwindow.h
 )  
 
 target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::Widgets Qt::WebSockets Qt6::Concurrent)
