--- a/cmake/windows_metafile.rc.in
+++ b/cmake/windows_metafile.rc.in
@@ -16,7 +16,7 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "@COMPANY@"
-            VALUE "FileDescription", "@PROJECT_NAME@"
+            VALUE "FileDescription", "@PROJECT_DESC@"
             VALUE "FileVersion", "@PROJECT_VERSION@"
             VALUE "LegalCopyright", "@COPYRIGHT@"
             VALUE "InternalName", "@PROJECT_NAME@"
