Add a settings manager Load what servers to connect to from settings Store settings in config.ini in programs working directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ set(SOURCE_FILES
     src/cvm/cvm.cpp
     src/cvm/models/vm_list.cpp
     src/ui/settings_dialog.cpp
+    src/settings/settings_manager.cpp
 )
 
 add_project_meta(META_FILES_TO_INCLUDE)
