fixed user list add back vm window

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,12 +23,17 @@ fix_project_version()
 set(SOURCE_FILES
     src/main.cpp
     src/ui/main_window.cpp
+    src/ui/vms/vm_window.cpp
     src/cvm/cvm.cpp
     src/cvm/server_manager.cpp
     src/cvm/server.cpp
     src/settings/settings_manager.cpp
     src/cvm/models/vm_list.cpp
+    src/cvm/models/user_list.cpp
+    src/cvm/models/delegates/user.cpp
     src/cvm/models/delegates/vm.cpp
+    src/cvm/models/proxies/user_filter.cpp
+
 )
 
 add_project_meta(META_FILES_TO_INCLUDE)
